Apps/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: monitoring
  hostnames:
  - "pihole.local"
  rules:
  - backendRefs:
    - name: pihole-web
      port: 80
  - matches:
     - path:
         type: PathPrefix
         value: /
